--- a/index.html
+++ b/index.html
@@ -377,6 +377,15 @@ echo &quot;*****************************&quot;
 <p><a href="https://www.thomas-krenn.com/en/wiki/Perl_warning_Setting_locale_failed_in_Debian">https://www.thomas-krenn.com/en/wiki/Perl_warning_Setting_locale_failed_in_Debian</a>
 <code>照着全部做下来</code></p>
 
+<h2 id="vim乱码解决:34fe9f2d9cc3cd7e319ca75e7da08332">Vim乱码解决</h2>
+
+<p><code>vim ~/.vimrc</code></p>
+
+<pre><code>set fileencodings=utf-8,ucs-bom,gb18030,gbk,gb2312,cp936
+set termencoding=utf-8
+set encoding=utf-8
+</code></pre>
+
 			</div>
 		</div>
 		
