--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@ To run your app on Android:
    react-native run-android
 </code></pre>
 
+<p>使用<code>React</code>类名(组件名)必须首字母大写才会被认为是一个组件,否则在JSX里只会当做普通标签</p>
+
 <p><strong>下面是一些针对开发IOS的教程</strong></p>
 
 <p>我们执行<code>react-native run-ios</code>开始编译运行,前提是你必须安装了<code>xcode</code>哦.</p>
