--- a/software/git-for-windows/index.html
+++ b/software/git-for-windows/index.html
@@ -36,15 +36,29 @@
 
 <p>所有资源均来源于官网<code>http://git-scm.com/download/win</code></p>
 
-<p>最新版本2.9.2,发布于 2016-7-16.</p>
+<p><strong>最新版本2.9.3,发布于2016-08-13</strong></p>
 
 <h3 id="32位资源">32位资源</h3>
+
+<p><a href="http://share.suconghou.cn/git/Git-2.9.3-32-bit.exe">32位安装版</a></p>
+
+<p><a href="http://share.suconghou.cn/git/PortableGit-2.9.3-64-bit.7z.exe">32位绿色版</a></p>
+
+<h3 id="64位资源">64位资源</h3>
+
+<p><a href="http://share.suconghou.cn/git/Git-2.9.3-64-bit.exe">64位安装版</a></p>
+
+<p><a href="http://share.suconghou.cn/git/PortableGit-2.9.3-64-bit.7z.exe">64位绿色版</a></p>
+
+<p><strong>版本2.9.2,发布于2016-7-16</strong></p>
+
+<h3 id="32位资源-1">32位资源</h3>
 
 <p><a href="http://share.suconghou.cn/git/Git-2.9.2-32-bit.exe">32位安装版</a></p>
 
 <p><a href="http://share.suconghou.cn/git/PortableGit-2.9.2-64-bit.7z.exe">32位绿色版</a></p>
 
-<h3 id="64位资源">64位资源</h3>
+<h3 id="64位资源-1">64位资源</h3>
 
 <p><a href="http://share.suconghou.cn/git/Git-2.9.2-64-bit.exe">64位安装版</a></p>
 
