--- a/software/android-studio/index.html
+++ b/software/android-studio/index.html
@@ -34,13 +34,14 @@
 
 <h2 id="下载-android-studio">下载 Android Studio</h2>
 
-<p><a href="http://www.oschina.net/news/75991/android-studio-2-2-beta">http://www.oschina.net/news/75991/android-studio-2-2-beta</a></p>
+<p><a href="http://www.oschina.net/news/76307/android-studio-2-2-beta-2">http://www.oschina.net/news/76307/android-studio-2-2-beta-2</a></p>
 
-<pre><code>Windows: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-windows.zip (461.5 MiB)
+<pre><code>Windows: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-windows.zip (461.5 MIB）
 
-Mac: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-mac.zip (462.1 MiB)
+Mac: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-mac.zip  (462.1 MIB）
 
-Linux: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-linux.zip (461.2 MiB)
+Linux:   https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-linux.zip  (461.2 MIB）
+
 </code></pre>
 
 <h2 id="安装android-sdk">安装android-sdk</h2>
