--- a/software/some-dev-tools/index.html
+++ b/software/some-dev-tools/index.html
@@ -62,7 +62,7 @@
 
 <p><code>sourceforge</code>上速度太慢,这里提供加速下载.</p>
 
-<p>win-bash<a href="http://share.suconghou.cn/tools/shell.w32-ix86.zip">shell.w32-ix86.zip</a></p>
+<p>win-bash下载<a href="http://share.suconghou.cn/Windows/shell.w32-ix86.zip">shell.w32-ix86.zip</a></p>
 
 <p>我的github也收集了一些<code>windows</code>上常用的小工具<code>axel</code>,<code>putty</code>,<code>ab</code>,<code>hugo</code>,<code>rsync</code>等</p>
 
