--- a/software/android-studio/index.html
+++ b/software/android-studio/index.html
@@ -34,14 +34,11 @@
 
 <h2 id="下载-android-studio">下载 Android Studio</h2>
 
-<p><a href="http://www.oschina.net/news/76307/android-studio-2-2-beta-2">http://www.oschina.net/news/76307/android-studio-2-2-beta-2</a></p>
+<p><a href="http://www.oschina.net/news/77839/android-studio-2-2-1">http://www.oschina.net/news/77839/android-studio-2-2-1</a></p>
 
-<pre><code>Windows: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-windows.zip (461.5 MIB）
-
-Mac: https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-mac.zip  (462.1 MIB）
-
-Linux:   https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-linux.zip  (461.2 MIB）
-
+<pre><code>Windows: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-windows.zip (437.1 MiB)
+Mac: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-mac.zip (437.7 MiB)
+Linux: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-linux.zip (436.8 MiB)
 </code></pre>
 
 <h2 id="安装android-sdk">安装android-sdk</h2>
