--- a/software/git-for-windows/index.html
+++ b/software/git-for-windows/index.html
@@ -40,15 +40,15 @@
 
 <h3 id="32位资源">32位资源</h3>
 
-<p><a href="http://share.suconghou.cn/git/Git-2.12.0-32-bit.exe">32位安装版</a></p>
+<p><a href="http://share.suconghou.cn/files/git/Git-2.12.0-32-bit.exe">32位安装版</a></p>
 
-<p><a href="http://share.suconghou.cn/git/PortableGit-2.12.0-64-bit.7z.exe">32位绿色版</a></p>
+<p><a href="http://share.suconghou.cn/files/git/PortableGit-2.12.0-64-bit.7z.exe">32位绿色版</a></p>
 
 <h3 id="64位资源">64位资源</h3>
 
-<p><a href="http://share.suconghou.cn/git/Git-2.12.0-64-bit.exe">64位安装版</a></p>
+<p><a href="http://share.suconghou.cn/files/git/Git-2.12.0-64-bit.exe">64位安装版</a></p>
 
-<p><a href="http://share.suconghou.cn/git/PortableGit-2.12.0-64-bit.7z.exe">64位绿色版</a></p>
+<p><a href="http://share.suconghou.cn/files/git/PortableGit-2.12.0-64-bit.7z.exe">64位绿色版</a></p>
 
 		</div>
 	</div>
