--- a/software/some-dev-tools/index.html
+++ b/software/some-dev-tools/index.html
@@ -38,11 +38,11 @@
 
 <p>苹果出品的<code>Monaco</code>,看起来十分圆润,首选推荐的编程字体</p>
 
-<p><a href="http://share.suconghou.cn/fonts/monaco.ttf">monaco</a></p>
+<p><a href="http://share.suconghou.cn/files/fonts/monaco.ttf">monaco</a></p>
 
 <p>或许还有很多人喜欢<code>YaHei.Consolas</code></p>
 
-<p><a href="http://share.suconghou.cn/fonts/YaHei.Consolas.1.12.zip">YaHei.Consolas.1.12.zip</a></p>
+<p><a href="http://share.suconghou.cn/files/fonts/YaHei.Consolas.1.12.zip">YaHei.Consolas.1.12.zip</a></p>
 
 <h3 id="一些从-linux-迁移到windows的东西">一些从<code>Linux</code>迁移到Windows的东西</h3>
 
@@ -62,7 +62,7 @@
 
 <p><code>sourceforge</code>上速度太慢,这里提供加速下载.</p>
 
-<p>win-bash下载<a href="http://share.suconghou.cn/Windows/shell.w32-ix86.zip">shell.w32-ix86.zip</a></p>
+<p>win-bash下载<a href="http://share.suconghou.cn/files/Windows/shell.w32-ix86.zip">shell.w32-ix86.zip</a></p>
 
 <p>我的github也收集了一些<code>windows</code>上常用的小工具<code>axel</code>,<code>putty</code>,<code>ab</code>,<code>hugo</code>,<code>rsync</code>等</p>
 
