--- a/software/android-studio/index.html
+++ b/software/android-studio/index.html
@@ -34,16 +34,11 @@
 
 <h2 id="下载-android-studio">下载 Android Studio</h2>
 
-<p><a href="http://www.oschina.net/news/77839/android-studio-2-2-1">http://www.oschina.net/news/77839/android-studio-2-2-1</a></p>
-
-<pre><code>Windows: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-windows.zip (437.1 MiB)
-Mac: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-mac.zip (437.7 MiB)
-Linux: https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-linux.zip (436.8 MiB)
-</code></pre>
-
 <h2 id="安装android-sdk">安装android-sdk</h2>
 
 <p><code>brew install android-sdk</code> 或者使用Android Studio SDK Manager</p>
+
+<p>android studio 下载的sdk 位于 <code>/Users/admin/Library/Android/sdk</code></p>
 
 		</div>
 	</div>
