--- a/photo/beijing-expo-2019/index.html
+++ b/photo/beijing-expo-2019/index.html
@@ -264,7 +264,7 @@
 
 <p><img src="http://static.suconghou.cn/image/expo2019/IMG_20190501_174257_1.jpg!medium" alt="" /></p>
 
-<p>优雅的康乃馨</p>
+<p>优雅的郁金香</p>
 
 <p><img src="http://static.suconghou.cn/image/expo2019/IMG_20190501_174340.jpg!medium" alt="" /></p>
 
